--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             ><img class="logo-img" src="imgs/logo.png"
           /></a>
           <div class="links-wrapper">
-            <a class="links" href="./index.html" target="_blank"
+            <a class="links" href="https://play.google.com/store/apps/details?id=com.luks51.tag" target="_blank"
               >TAG aplikacija</a
             >
             <a
